--- a/Heart_CSJDM/Components/Pages/Client.razor
+++ b/Heart_CSJDM/Components/Pages/Client.razor
@@ -1,4 +1,4 @@
-﻿@page "/Client/{qrcode}"
+﻿@page "/Client"
 @rendermode InteractiveServer
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
 @inject ProtectedSessionStorage ProtectedSessionStore;
