--- a/Heart_CSJDM/Components/Pages/Admin/Clients.razor
+++ b/Heart_CSJDM/Components/Pages/Admin/Clients.razor
@@ -151,7 +151,7 @@
                 </Fields>
                 <Button Type="ButtonType.Submit" Color="Color.Primary">Update</Button>
             </EditForm>
-            <div id="qrcode"></div>
+            @* <div id="qrcode" style="width:100px;height:100px;background-color:aquamarine;"></div> *@
         </ModalBody>
     </ModalContent>
 </Modal>
