--- a/Heart_CSJDM/Components/Pages/Client.razor
+++ b/Heart_CSJDM/Components/Pages/Client.razor
@@ -106,24 +106,20 @@
             <CloseButton />
         </ModalHeader>
         <ModalBody>
-            <div class="row clientinfo">
-                <div class="col-md-10 ">
-                    <div class="row clientdetails">
-                        <div class="col-sm-2 "><img width="100px" height="100px" /></div>
-                        <div class="col-sm-8">
-                            <center>
-                                <h2> @ClientInfo.LastName , @ClientInfo.FirstName, @ClientInfo.MiddleName</h2> <br />
-                                ID No : @ClientInfo.ID_No <br />
-                                Contact No : @ClientInfo.Contact_No <br />
-                                Birth Date : @ClientInfo.Birthdate <br />
-                                Age : @ClientInfo.Age <br />
-                                Gender : @ClientInfo.Gender <br />
-                                Marital Status : @ClientInfo.Marital_Status <br />
-                                Address : @ClientInfo.Address <br />
-                                sector :  <br />
-                            </center>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col-sm-2 "><img width="100px" height="100px" /></div>
+                <div class="col-sm-8">
+                    <center>
+                        <h2> @ClientInfo.LastName , @ClientInfo.FirstName, @ClientInfo.MiddleName</h2> <br />
+                        @* ID No : @ClientInfo.ID_No <br />
+                        Contact No : @ClientInfo.Contact_No <br />
+                        Birth Date : @ClientInfo.Birthdate <br />
+                        Age : @ClientInfo.Age <br />
+                        Gender : @ClientInfo.Gender <br />
+                        Marital Status : @ClientInfo.Marital_Status <br />
+                        Address : @ClientInfo.Address <br />
+                        sector :  <br /> *@
+                    </center>
                 </div>
             </div>
             <div class="row clientinfo">
