--- a/Heart_CSJDM/Components/Layout/NavMenu.razor
+++ b/Heart_CSJDM/Components/Layout/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Appointment">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Appointments
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="ScanQR">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Scan QR
             </NavLink>
