--- a/Heart_CSJDM/Components/Layout/NavMenu.razor
+++ b/Heart_CSJDM/Components/Layout/NavMenu.razor
@@ -22,11 +22,7 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> About
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Appointment">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Appointments
-            </NavLink>
-        </div>
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="ScanQR">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Scan QR
@@ -35,6 +31,16 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Admin/Clients">
                 <span class="bi bi-file-earmark-person-fill" aria-hidden="true"></span> Clients
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Appointment">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Appointments
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Transactions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>Transactions
             </NavLink>
         </div>
         <AuthorizeView>
