--- a/Heart_CSJDM/Components/Pages/Admin/Clients.razor
+++ b/Heart_CSJDM/Components/Pages/Admin/Clients.razor
@@ -9,6 +9,27 @@
 @using System.Drawing.Imaging;
 @inject IJSRuntime JSRuntime
 @using Blazorise
+<Fields>
+    <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+        <InputText @bind-Value="@inputValue" @oninput="OnInput" />
+    </Field>
+    <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+        <Select TValue="int" @bind-SelectedValue="_temp.lookupID" @onchange="filterChange">
+            @foreach (var item in _lookups)
+            {
+                <SelectItem Value="@item.LookupCriteriaID">@item.Description</SelectItem>
+            }
+        </Select>
+    </Field>
+    <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+        <Select TValue="int" @bind-SelectedValue="_temp.lookupCategoryID" @onchange="filterChangev2">
+            @foreach (var item in _filterlookups)
+            {
+                <SelectItem Value="@item.LookupCriteriaID">@item.Description</SelectItem>
+            }
+        </Select>
+    </Field>
+</Fields>
 <Table Class="table-striped">
     <TableHeader>
         <TableRow>
@@ -56,7 +77,7 @@
         </ModalHeader>
         <ModalBody>
             <EditForm Model="@ClientInfo" OnValidSubmit="@SubmitForm">
-            <Fields >
+            <Fields>
                 <Field ColumnSize="ColumnSize.Is3.OnDesktop">
                     <FieldLabel>Last Name</FieldLabel>
                         <TextEdit @bind-Text="@ClientInfo.LastName" />
@@ -97,13 +118,31 @@
                     <FieldLabel>Martal Status</FieldLabel>
                         <TextEdit @bind-Text="@ClientInfo.Marital_Status" />
                 </Field>
-                <Field ColumnSize="ColumnSize.Is3.OnDesktop">
+                <Field ColumnSize="ColumnSize.Is2.OnDesktop">
                         <FieldLabel>Status:</FieldLabel> <FieldLabel>@ClientInfo.Status</FieldLabel>
                         <Select TValue="string" @bind-SelectedValue="@ClientInfo.Statusint" >
                             <SelectItem Value="1">Active</SelectItem>
                             <SelectItem Value="0">In-Active</SelectItem>
                     </Select>
                 </Field>
+                    <Field ColumnSize="ColumnSize.Is2.OnDesktop">
+                        <FieldLabel>Sector:</FieldLabel> <FieldLabel>@_temp.sector</FieldLabel>
+                        <Select TValue="int" @bind-SelectedValue="@ClientInfo.SectorID">
+                            @foreach (var item in _sector )
+                            {
+                                <SelectItem Value="@item.SectorID">@item.Description</SelectItem>
+                            }
+                        </Select>
+                    </Field>
+                    <Field ColumnSize="ColumnSize.Is2.OnDesktop">
+                        <FieldLabel>Organization:</FieldLabel> <FieldLabel>@_temp.organization</FieldLabel>
+                        <Select TValue="int" @bind-SelectedValue="@ClientInfo.OrganizationID">
+                            @foreach (var item in _organization)
+                            {
+                                <SelectItem Value="@item.OrganizationID">@item.Description</SelectItem>
+                            }
+                        </Select>
+                    </Field>
             </Fields>
                 <Fields>
                     <Field ColumnSize="ColumnSize.Is3.OnDesktop">
@@ -129,8 +168,13 @@
                         <TextEdit @bind-Text="@ClientInfo.Address_Building" />
                     </Field>
                     <Field ColumnSize="ColumnSize.Is3.OnDesktop">
-                        <FieldLabel>Baranggay</FieldLabel>
-                        <TextEdit @bind-Text="@ClientInfo.Address_Barangay" />
+                        <FieldLabel>Barangay:</FieldLabel> <FieldLabel>@ClientInfo.Address_Barangay</FieldLabel>
+                        <Select TValue="int" @bind-SelectedValue="@_temp.BarangayID">
+                        @foreach (var item in _barangay)
+                        {
+                            <SelectItem Value="@item.BarangayID">@item.Name</SelectItem>
+                        }
+                        </Select>
                     </Field>
                 </Fields>
                 <Fields>
