--- a/Heart_CSJDM/Components/Pages/Appointments.razor
+++ b/Heart_CSJDM/Components/Pages/Appointments.razor
@@ -11,10 +11,10 @@
         <DateEdit @bind-Date="selectedDate" onchange="@DateChanged" Size="Size.Medium" />
     </Div>
     <Div Class="col-4">
-        <Button Class="btn-primary">Add Appointments</Button>
+        <Button Class="btn-primary" @onclick="@ShowModal">Add Appointments</Button>
     </Div>
 </Div>
-<Table>
+<Table Class="table-striped">
     <TableHeader>
         <TableRow>
             <TableHeaderCell>#AppointmentID</TableHeaderCell>
@@ -41,18 +41,145 @@
         }
     </TableBody>
 </Table>
-<InputText @bind-Value="@inputValue" @oninput="OnInput" />
+<Modal @bind-Visible="@modalVisible">
+    <ModalContent Centered Size="ModalSize.ExtraLarge">
+        <ModalHeader>
+            <ModalTitle>Appointment Information</ModalTitle>
+            <CloseButton />
+        </ModalHeader>
+        <ModalBody>
+            <div class="row">
+                <div class="col-sm-8">
+                    <Fields>
+                    <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+                         <InputText @bind-Value="@inputValue" @oninput="OnInput"  />
+                    </Field>
+                    <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+                        <Select TValue="int" @bind-SelectedValue="_temp.lookupID" @onchange="filterChange">
+                            @foreach (var item in _lookups)
+                            {
+                                <SelectItem Value="@item.LookupCriteriaID">@item.Description</SelectItem>
+                            }
+                        </Select>
+                    </Field>
+                        <Field ColumnSize="ColumnSize.Is4.OnDesktop">
+                            <Select TValue="int" @bind-SelectedValue="_temp.lookupCategoryID" @onchange="filterChangev2">
+                                @foreach (var item in _filterlookups)
+                                {
+                                    <SelectItem Value="@item.LookupCriteriaID">@item.Description</SelectItem>
+                                }
+                            </Select>
+                        </Field>
+                    </Fields>
+                    @if (showSuggestions)
+                    {
+                        <div style="z-index:10;position:absolute;background-color:white;">
+                        <ul>
+                            @foreach (var suggestion in suggestedclients)
+                            {
+                                <li>@suggestion.ClientName
+                                        <Button Clicked="@( () => AddAppointment(suggestion.ClientID,suggestion.ClientName) )">
+                                        <b class="text-primary">+</b>
+                                    </Button>
+                                    </li>
+                            }
+                        </ul>
+                        </div>
+                    }
+                </div>
+            </div>
+            <div class="row clientinfo">
+                <div class="row">
+                    <div class="col-md-5 ">
+                        <Span> Date of Appointment </Span>
+                        <DateEdit @bind-Date="selectedDate" onchange="@DateChanged" />
+                    </div>
+                    <div class="col-md-5 ">
+                        <Span> Type of Services </Span><br />
+                        <Dropdown @bind-Value="SelectedItem">
+                            <Button Color="Color.Success">@SelectedItem</Button>
+                            <DropdownToggle Color="Color.Primary" Split />
+                            <DropdownMenu>
+                                @foreach (var item in _typeofservices)
+                                {
+                                    <DropdownItem Clicked="@( () => SelectItem(item.TypeOfServicesID.ToString()) )">@item.Name</DropdownItem>
+                                }
+                                <DropdownDivider />
+                            </DropdownMenu>
+                        </Dropdown>
+                    </div>
+                </div>
+                <div class="col-md-10 ">
+                    <Table>
+                        <TableHeader>
+                            <TableRow>
+                                <TableHeaderCell>#</TableHeaderCell>
+                                <TableHeaderCell>ClientName</TableHeaderCell>
+                                <TableHeaderCell>Services</TableHeaderCell>
+                                <TableHeaderCell>Assigned To</TableHeaderCell>
+                                <TableHeaderCell>Status</TableHeaderCell>
+                                <TableHeaderCell>Remark</TableHeaderCell>
+                            </TableRow>
+                        </TableHeader>
+                        <TableBody>
+                            @foreach (var serv in forAppointments)
+                            {
+                                <TableRow>
+                                    <TableRowHeader>@serv.TransactionID</TableRowHeader>
+                                    <TableRowCell>@serv.ClientName</TableRowCell>
+                                    <TableRowCell>
+                                        <Dropdown>
+                                            <Button Color="Color.Success" value="Test">@serv.Services</Button>
+                                            <DropdownToggle Color="Color.Primary" Split />
+                                            <DropdownMenu>
+                                                @foreach (var item in services)
+                                                {
+                                                    <DropdownItem Clicked="@( () => SelectItemServices(item,@serv.ClientID,@serv.AppointmentID))">@item.ServicesName</DropdownItem>
+                                                }
+                                                <DropdownDivider />
+                                            </DropdownMenu>
+                                        </Dropdown>
+                                    </TableRowCell>
+                                    <TableRowCell>
+                                        <Dropdown>
+                                            <Button Color="Color.Success" value="Test">@serv.AssignedTo</Button>
+                                            <DropdownToggle Color="Color.Primary" Split />
+                                            <DropdownMenu>
+                                                @foreach (var item in ItemsAssignedto)
+                                                {
+                                                    <DropdownItem Clicked="@( () => SelectItemAssignedTo(item,@serv.ClientID,@serv.AppointmentID))">@item</DropdownItem>
+                                                }
+                                                <DropdownDivider />
+                                            </DropdownMenu>
+                                        </Dropdown>
+                                    </TableRowCell>
+                                    <TableRowCell>
+                                        <Dropdown>
+                                            <Button Color="Color.Success">@serv.Status</Button>
+                                            <DropdownToggle Color="Color.Primary" Split />
+                                            <DropdownMenu>
+                                                @foreach (var item in ItemsStatus)
+                                                {
+                                                    <DropdownItem Clicked="@( () => SelectItemStatus(item,@serv.ClientID,@serv.AppointmentID))">@item</DropdownItem>
+                                                }
+                                            </DropdownMenu>
+                                        </Dropdown>
+                                    </TableRowCell>
+                                    <TableRowCell>Details</TableRowCell>
+                                </TableRow>
+                            }
+                        </TableBody>
+                    </Table>
+                </div>
+            </div>
+        </ModalBody>
+        <ModalFooter>
+            <Button Color="Color.Secondary" Clicked="@HideModal">Close</Button>
+            <Button Color="Color.Primary" Clicked="@Save_Appointment">Save Changes</Button>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
 
-@if (showSuggestions)
-{
-    <ul>
-        @foreach (var suggestion in suggestedclients)
-        {
-            <li>@suggestion.ClientName </li>
-            <Button>Add</Button>
-        }
-    </ul>
-}
 
 @code {
     string inputValue = "";
